welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: type mismatch;
 found   : Unit
 required: Boolean
    for (j <- 0 to L-1) {
           ^arrayFront9:13: error: not found: value j
      if (nums(j)==9) {
               ^arrayFront9:12: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i <- 0 to 3) {
           ^